--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,25 @@
     transform: rotate(360deg);
   }
 }
+@media screen and (max-width: 688px) {
+  html { 
+    font-size: 8px;
+  }
+}
+@media screen and (max-width: 488px) {
+  html { 
+    font-size: 5px;
+  }
+}
+@media screen and (min-width: 768px) {
+  html { 
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  html { 
+
+    font-size: 16px;
+  }
+
+}
